--- a/components/Footer/footer.module.scss
+++ b/components/Footer/footer.module.scss
@@ -19,4 +19,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  position: relative;
+  top: 0;
+  transition: top 0.3s;
+}
+
+.footerMiddle:hover {
+  top: -10px;
 }
