--- a/styles/styles.module.scss
+++ b/styles/styles.module.scss
@@ -15,3 +15,9 @@ $nav-font: Helvetica;
   font-weight: 100;
   margin: 12px 0;
 }
+
+@media (max-width: 748px) {
+  .subtitleStyle {
+    font-size: 16px;
+  }
+}
