feat: hamburger menu for mobile

--- a/components/Header/header.module.scss
+++ b/components/Header/header.module.scss
@@ -18,8 +18,8 @@
   }
 }
 
-.hideMobile {
-  @media (max-width: 748px) {
-    display: none;
-  }
+.hamburgerWrapper {
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
 }
