--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,5 +13,7 @@ a {
 
 * {
   box-sizing: border-box;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  -webkit-tap-highlight-color:transparent;
 }
 
