feat: add basic project page

--- a/components/Container/container.module.scss
+++ b/components/Container/container.module.scss
@@ -2,3 +2,10 @@
   margin: 0 10vw;
   position: relative;
 }
+
+.main {
+  display: flex;
+  flex-direction: column;
+  min-height: calc(100vh - 60px);
+  justify-content: space-between;
+}
