--- a/components/Header/header.module.scss
+++ b/components/Header/header.module.scss
@@ -16,6 +16,10 @@
   li:hover {
     text-decoration: underline;
   }
+
+  @media (max-width: 1200px) {
+    width: 50%;
+  }
 }
 
 .hamburgerWrapper {
