--- a/pages/skills/FavouriteTech/favouritetech.module.scss
+++ b/pages/skills/FavouriteTech/favouritetech.module.scss
@@ -29,6 +29,11 @@
   margin-right: 30px;
 }
 
+.infoWrapper {
+  display: flex;
+  flex-direction: column;
+}
+
 .comment {
   position: absolute;
   z-index: 2; 
@@ -55,11 +60,16 @@
     border-color: white transparent transparent transparent;
 }
 
+.info {
+  padding-bottom: 30px;
+  padding-top: 15px;
+}
+
 @media (max-width: 748px) {
   .techPageWrapper {
     grid-template-rows: column(6, 1fr);
     grid-template-columns: none;
-    margin: 30px 0;
+    margin: 0 0 50px 0;
     row-gap: 50px;
   }
 
