--- a/styles/styles.module.scss
+++ b/styles/styles.module.scss
@@ -28,6 +28,16 @@ $nav-font: Helvetica;
   opacity: 67%;
 }
 
+.infoStyle {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 135px;
+  opacity: 67%;
+  font-size: 14px;
+  font-family: PT Sans;
+}
+
 @media (max-width: 748px) {
   .subtitleStyle {
     font-size: 16px;
@@ -39,6 +49,10 @@ $nav-font: Helvetica;
 
   .annotationStyle {
     font-size: 14px;
+  }
+
+  .infoStyle {
+    width: 125px;
   }
 }
 
