--- a/pages/projects/FeaturedProject/featuredproject.module.scss
+++ b/pages/projects/FeaturedProject/featuredproject.module.scss
@@ -1,6 +1,15 @@
-.imageWrapper {
+.wrapper { 
   display: flex;
   justify-content: center;
+}
+
+.imageWrapper {
+  max-width: 1200px;
+  max-height: 600px;
+
+  img {
+    width: 100%;
+  }
 }
 
 .mobileImageWrapper {
