--- a/pages/skills/FavouriteTech/favouritetech.module.scss
+++ b/pages/skills/FavouriteTech/favouritetech.module.scss
@@ -20,6 +20,14 @@
       height: 65px;
       position: relative;
       margin-bottom: 5px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      img {
+        max-width: 100%;
+        max-height: 100%;
+      }
     }
   }
 }
